--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   koin: ^0.14.2
   easy_localization: ^3.0.1
   sprintf: ^7.0.0
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +35,7 @@ flutter:
     - assets/fonts/
     - assets/translations/
     - assets/json/
+    - assets/images/
 
   fonts:
     - family: PTSerif-Bold
